optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_issue_4438.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from '@qwik.dev/core';

export const App = component$(() => {
	const toggle = useSignal(false);
	return (
		<>
			<div data-nu={toggle.value ? $localize`singular` : 'plural'}></div>
			<div>{toggle.value ? $localize`singular` : $localize`plural`}</div>
		</>
	);
});

============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
============================= test.tsx_App_component_ckEPmXZlub0.tsx (ENTRY POINT)==

import { _jsxSorted, useSignal } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const App_component_ckEPmXZlub0 = ()=>{
	const toggle = useSignal(false);
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [/*#__PURE__*/ _jsxSorted("div", { data-nu: toggle.value ? $localize`singular` : "plural" }, null, null, 3, null), /*#__PURE__*/ _jsxSorted("div", null, null, toggle.value ? $localize`singular` : $localize`plural`, 1, null)], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": "entry_segments",
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    87,
    297
  ]
}
*/
== DIAGNOSTICS ==

[]
