optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_jsx_keyed.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	return (
		<>
			<Cmp key="stuff"></Cmp>
			<Cmp></Cmp>
			<Cmp prop="23"></Cmp>
			<Cmp prop="23" key={props.stuff}></Cmp>
			<p key={props.stuff}>Hello Qwik</p>
		</>
	);
});

============================= ./example_jsx_keyed.tsx_App_component_QTYu2oVBpFo.js (ENTRY POINT)==

import{_jsxSorted}from"@qwik.dev/core";import{Fragment as _Fragment}from"@qwik.dev/core/jsx-runtime";export const App_component_QTYu2oVBpFo=props=>/* @__PURE__ */ _jsxSorted(_Fragment,null,null,[_jsxSorted(Cmp,null,null,null,3,`stuff`),_jsxSorted(Cmp,null,null,null,3,null),_jsxSorted(Cmp,null,{prop:`23`},null,3,null),_jsxSorted(Cmp,null,{prop:`23`},null,3,props.stuff),/* @__PURE__ */ _jsxSorted(`p`,null,null,`Hello Qwik`,3,props.stuff)],3,null);

None
/*
{
  "origin": "example_jsx_keyed.tsx",
  "name": "App_component_QTYu2oVBpFo",
  "entry": null,
  "displayName": "example_jsx_keyed.tsx_App_component",
  "hash": "QTYu2oVBpFo",
  "canonicalFilename": "example_jsx_keyed.tsx_App_component_QTYu2oVBpFo",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "App_component_QTYu2oVBpFo",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= example_jsx_keyed.tsx ==

import{componentQrl,qrl}from"@qwik.dev/core";export const App=componentQrl(qrl(()=>import(`./example_jsx_keyed.tsx_App_component_QTYu2oVBpFo.js`),`App_component_QTYu2oVBpFo`));

None
== DIAGNOSTICS ==

[]
