optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_jsx_keyed_dev.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	return (
		<>
			<Cmp key="stuff"></Cmp>
			<Cmp></Cmp>
			<Cmp prop="23"></Cmp>
			<Cmp prop="23" key={props.stuff}></Cmp>
			<p key={props.stuff}>Hello Qwik</p>
		</>
	);
});

============================= project/index.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
export const App = componentQrl(qrl(() => import("./index.tsx_App_component_KGLYFBhvJc0.js"), "App_component_KGLYFBhvJc0"));


None
============================= ./project/index.tsx_App_component_KGLYFBhvJc0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const App_component_KGLYFBhvJc0 = (props) => {
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		_jsxSorted(Cmp, null, null, null, 3, "stuff"),
		_jsxSorted(Cmp, null, null, null, 3, null),
		_jsxSorted(Cmp, null, { prop: "23" }, null, 3, null),
		_jsxSorted(Cmp, null, { prop: "23" }, null, 3, props.stuff),
		/*#__PURE__*/ _jsxSorted("p", null, null, "Hello Qwik", 3, props.stuff)
	], 3, null);
};


None
/*
{
  "origin": "project/index.tsx",
  "name": "App_component_KGLYFBhvJc0",
  "entry": null,
  "displayName": "index.tsx_App_component",
  "hash": "KGLYFBhvJc0",
  "canonicalFilename": "index.tsx_App_component_KGLYFBhvJc0",
  "path": "./project",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "App_component_KGLYFBhvJc0",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
