optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_jsx_listeners.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$ } from '@qwik.dev/core';

export const Foo = component$(() => {

	return $(() => {
		const handler = $(() => console.log('reused'));
		return (
			<div
				onClick$={()=>console.log('onClick$')}
				onDocumentScroll$={()=>console.log('onDocumentScroll')}
				onDocumentScroll$={()=>console.log('onWindowScroll')}

				on-cLick$={()=>console.log('on-cLick$')}
				onDocument-sCroll$={()=>console.log('onDocument-sCroll')}
				onDocument-scroLL$={()=>console.log('onDocument-scroLL')}

				host:onClick$={()=>console.log('host:onClick$')}
				host:onDocumentScroll$={()=>console.log('host:onDocument:scroll')}
				host:onDocumentScroll$={()=>console.log('host:onWindow:scroll')}

				onKeyup$={handler}
				onDocument:keyup$={handler}
				onWindow:keyup$={handler}

				custom$={()=>console.log('custom')}
			/>
		)
	});
}, {
	tagName: "my-foo",
});

============================= example_jsx_listeners.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_Foo_component_handler_qsIND80K9ow = () => import("./example_jsx_listeners.tsx_Foo_component_handler_qsIND80K9ow.js");
const i_Foo_component_1_div_onClick = () => import("./example_jsx_listeners.tsx.js");
const i_Foo_component_1_div_onDocumentScroll = () => import("./example_jsx_listeners.tsx.js");
const i_Foo_component_1_div_onDocumentScroll_1 = () => import("./example_jsx_listeners.tsx.js");
const i_Foo_component_1_div_on-cLick = () => import("./example_jsx_listeners.tsx.js");
const i_Foo_component_1_div_onDocument-sCroll = () => import("./example_jsx_listeners.tsx.js");
const i_Foo_component_1_div_onDocument-scroLL = () => import("./example_jsx_listeners.tsx.js");
const i_Foo_component_1_div_onClick_1 = () => import("./example_jsx_listeners.tsx.js");
const i_Foo_component_1_div_onDocumentScroll_2 = () => import("./example_jsx_listeners.tsx.js");
const i_Foo_component_1_div_onDocumentScroll_3 = () => import("./example_jsx_listeners.tsx.js");
const i_Foo_component_1_div_custom = () => import("./example_jsx_listeners.tsx.js");
const i_Foo_component_1_u3P4ZlOev6I = () => import("./example_jsx_listeners.tsx_Foo_component_1_u3P4ZlOev6I.js");
const i_Foo_component_PmQ0Y3BvS84 = () => import("./example_jsx_listeners.tsx_Foo_component_PmQ0Y3BvS84.js");
export const Foo = componentQrl(qrl(i_Foo_component_PmQ0Y3BvS84, "Foo_component_PmQ0Y3BvS84"));


None
============================= ./example_jsx_listeners.tsx_Foo_component_handler_qsIND80K9ow.js (ENTRY POINT)==

export const Foo_component_handler_qsIND80K9ow = () => console.log("reused");


None
/*
{
  "origin": "example_jsx_listeners.tsx",
  "name": "Foo_component_handler_qsIND80K9ow",
  "entry": null,
  "displayName": "example_jsx_listeners.tsx_Foo_component_handler",
  "hash": "qsIND80K9ow",
  "canonicalFilename": "example_jsx_listeners.tsx_Foo_component_handler_qsIND80K9ow",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Foo_component_handler_qsIND80K9ow",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= ./example_jsx_listeners.tsx_Foo_component_1_u3P4ZlOev6I.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
export const Foo_component_1_u3P4ZlOev6I = () => {
	const handler = qrl(i_Foo_component_handler_qsIND80K9ow, "Foo_component_handler_qsIND80K9ow");
	return /*#__PURE__*/ _jsxSorted("div", {
		on:click: qrl(i_Foo_component_1_div_onClick, "Foo_component_1_div_onClick"),
		on:documentscroll: qrl(i_Foo_component_1_div_onDocumentScroll, "Foo_component_1_div_onDocumentScroll"),
		on:documentscroll: qrl(i_Foo_component_1_div_onDocumentScroll_1, "Foo_component_1_div_onDocumentScroll_1"),
		on:c-lick: qrl(i_Foo_component_1_div_on-cLick, "Foo_component_1_div_on-cLick"),
		on:document-scroll: qrl(i_Foo_component_1_div_onDocument-sCroll, "Foo_component_1_div_onDocument-sCroll"),
		on:document-scroll: qrl(i_Foo_component_1_div_onDocument-scroLL, "Foo_component_1_div_onDocument-scroLL"),
		host:onClick$: qrl(i_Foo_component_1_div_onClick_1, "Foo_component_1_div_onClick_1"),
		host:onDocumentScroll$: qrl(i_Foo_component_1_div_onDocumentScroll_2, "Foo_component_1_div_onDocumentScroll_2"),
		host:onDocumentScroll$: qrl(i_Foo_component_1_div_onDocumentScroll_3, "Foo_component_1_div_onDocumentScroll_3"),
		custom$: qrl(i_Foo_component_1_div_custom, "Foo_component_1_div_custom")
	}, {
		on:keyup: handler,
		on:document:keyup: handler,
		on:window:keyup: handler
	}, null, 3, null);
};


None
/*
{
  "origin": "example_jsx_listeners.tsx",
  "name": "Foo_component_1_u3P4ZlOev6I",
  "entry": null,
  "displayName": "example_jsx_listeners.tsx_Foo_component_1",
  "hash": "u3P4ZlOev6I",
  "canonicalFilename": "example_jsx_listeners.tsx_Foo_component_1_u3P4ZlOev6I",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Foo_component_1_u3P4ZlOev6I",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= ./example_jsx_listeners.tsx_Foo_component_PmQ0Y3BvS84.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
export const Foo_component_PmQ0Y3BvS84 = () => {
	return qrl(i_Foo_component_1_u3P4ZlOev6I, "Foo_component_1_u3P4ZlOev6I");
};


None
/*
{
  "origin": "example_jsx_listeners.tsx",
  "name": "Foo_component_PmQ0Y3BvS84",
  "entry": null,
  "displayName": "example_jsx_listeners.tsx_Foo_component",
  "hash": "PmQ0Y3BvS84",
  "canonicalFilename": "example_jsx_listeners.tsx_Foo_component_PmQ0Y3BvS84",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Foo_component_PmQ0Y3BvS84",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
